--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="A vocabulary quiz to learn German">
+    <meta name="keywords" content="vocabulary, quiz, german, english">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Vocabulary Quiz</title>
 </head>
 <body>
     <h1>This is a test heading</h1>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
