Add html structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,48 @@
     <title>Vocabulary Quiz</title>
 </head>
 <body>
-    <h1>This is a test heading</h1>
+    <!-- header with game title -->
+    <header>
+        <h1>Vocabulary Quiz</h1>
+    </header>
+
+    <!-- main game content -->
+    <main id="game">
+        <section id="explanation">
+            <h2>Choose the matching card!</h2>
+            <p>
+                There are 9 word pairs.<br>
+                Once you find the match, the next word will appear.<br>
+                How many attempts do you need to find all 9?                
+            </p>
+        </section>
+        <section id="englishword">
+            <div>English word</div>
+        </section>
+        <section id="germanwords">
+            <button id="box1" class="box">German Word 1</button>
+            <button id="box2" class="box">German Word 2</button>
+            <button id="box3" class="box">German Word 3</button>
+            <button id="box4" class="box">German Word 4</button>
+            <button id="box5" class="box">German Word 5</button>
+            <button id="box6" class="box">German Word 6</button>
+            <button id="box7" class="box">German Word 7</button>
+            <button id="box8" class="box">German Word 8</button>
+            <button id="box9" class="box">German Word 9</button>
+        </section>
+        <section>
+            <div id="numberofattempts">Number of attempts: 0</div>
+        </section>
+        <section id="restart">
+            <button id="restartgame">Restart Game</button>
+        </section>
+    </main>
+
+    <!-- footer with social media link -->
+    <footer>
+        <p>Find more games on Instram</p>
+    </footer>
+    
 
     <script src="assets/js/script.js"></script>
 </body>
