Add css website grid and main grid

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button id="box8" class="box">German Word 8</button>
             <button id="box9" class="box">German Word 9</button>
         </section>
-        <section>
+        <section id="attempts">
             <div id="numberofattempts">Number of attempts: 0</div>
         </section>
         <section id="restart">
