Add font awesome icon to footer and update readme typography section

--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
 
     <!-- footer with social media link -->
     <footer>
-        <p>Find more games on Instram</p>
+        <p>Find more games on Instagram</p>
+        <a href="https://www.instagram.com" target="_blank" aria-label="Click for more games on Instagram" rel="noopener">
+            <i class="fab fa-instagram"></i>
+        </a>
     </footer>
     
-
+    <script src="https://kit.fontawesome.com/103d78b09a.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
