Add german words and data-vocab attribute in html

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
             </p>
         </section>
         <section id="englishword">
-            <div>English word</div>
+            <div id="word">dog</div>
         </section>
         <section id="germanwords">
-            <button id="box1" class="box">German Word 1</button>
-            <button id="box2" class="box">German Word 2</button>
-            <button id="box3" class="box">German Word 3</button>
-            <button id="box4" class="box">German Word 4</button>
-            <button id="box5" class="box">German Word 5</button>
-            <button id="box6" class="box">German Word 6</button>
-            <button id="box7" class="box">German Word 7</button>
-            <button id="box8" class="box">German Word 8</button>
-            <button id="box9" class="box">German Word 9</button>
+            <button id="box1" class="box" data-vocab="horse">Pferd</button>
+            <button id="box2" class="box" data-vocab="giraffe">Giraffe</button>
+            <button id="box3" class="box" data-vocab="fish">Fisch</button>
+            <button id="box4" class="box"data-vocab="dog">Hund</button>
+            <button id="box5" class="box" data-vocab="tiger">Tiger</button>
+            <button id="box6" class="box" data-vocab="cat">Katze</button>
+            <button id="box7" class="box" data-vocab="guinea pig">Meerschweinchen</button>
+            <button id="box8" class="box" data-vocab="cheetah">Gepard</button>
+            <button id="box9" class="box" data-vocab="lion">Löwe</button>
         </section>
         <section id="attempts">
             <div id="numberofattempts">Number of attempts: 0</div>
