Add counterSpan for number of attempts

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
         </section>
         <section id="englishword">
-            <div id="word">dog</div>
+            <div id="word"></div>
         </section>
         <section id="germanwords">
             <button id="box1" class="box" data-vocab="horse">Pferd</button>
@@ -40,7 +40,10 @@
             <button id="box9" class="box" data-vocab="lion">Löwe</button>
         </section>
         <section id="attempts">
-            <div id="numberofattempts">Number of attempts: 0</div>
+            <div id="numberofattempts">
+                Number of attempts: 
+                <span id="counter">0</span>
+            </div>
         </section>
         <section id="restart">
             <button id="restartgame">Restart Game</button>
