Change button tags to div tags

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <div id="word"></div>
         </section>
         <section id="germanwords">
-            <button id="box1" class="box" data-vocab="horse">Pferd</button>
-            <button id="box2" class="box" data-vocab="giraffe">Giraffe</button>
-            <button id="box3" class="box" data-vocab="fish">Fisch</button>
-            <button id="box4" class="box" data-vocab="dog">Hund</button>
-            <button id="box5" class="box" data-vocab="tiger">Tiger</button>
-            <button id="box6" class="box" data-vocab="cat">Katze</button>
-            <button id="box7" class="box" data-vocab="guinea pig">Meerschweinchen</button>
-            <button id="box8" class="box" data-vocab="cheetah">Gepard</button>
-            <button id="box9" class="box" data-vocab="lion">Löwe</button>
+            <div id="box1" class="box" data-vocab="horse">Pferd</div>
+            <div id="box2" class="box" data-vocab="giraffe">Giraffe</div>
+            <div id="box3" class="box" data-vocab="fish">Fisch</div>
+            <div id="box4" class="box" data-vocab="dog">Hund</div>
+            <div id="box5" class="box" data-vocab="tiger">Tiger</div>
+            <div id="box6" class="box" data-vocab="cat">Katze</div>
+            <div id="box7" class="box" data-vocab="guinea pig">Meerschweinchen</div>
+            <div id="box8" class="box" data-vocab="cheetah">Gepard</div>
+            <div id="box9" class="box" data-vocab="lion">Löwe</div>
         </section>
         <section id="attempts">
             <div id="numberofattempts">
