--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
         </section>
     </main>
 
+    <!-- Modal that is displayed when the game is finished 
+    code taken from w3schools.com/howto/howto_css_modal.asp
+    -->
+    <div id="winModal" class="modal">
+        <div class="modal-content">
+            <p>Congratulation! You found all of the words!</p>
+            <button id="close">close window</button>
+        </div>
+    </div>
+
+
     <!-- footer with social media link -->
     <footer>
         <p>Find more games on Instagram</p>
