Remove p text in modal and add id

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     -->
     <div id="winModal" class="modal">
         <div class="modal-content">
-            <p>Congratulation! You found all of the words!</p>
+            <p id="winningtext"></p>
             <button id="close">close window</button>
         </div>
     </div>
