Change the modal button text to try again

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="winModal" class="modal">
         <div class="modal-content">
             <p id="winningtext"></p>
-            <button id="close">close window</button>
+            <button id="close">Try again!</button>
         </div>
     </div>
 
