Change the explanation text to be more precise

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <section id="explanation">
             <h2>Choose the matching card!</h2>
             <p>
-                There are 9 word pairs.<br>
-                Once you find the match, the next word will appear.<br>
-                How many attempts do you need to find all 9?                
+                Match the English word at the top with the correct German word.<br>
+                Once you find the match, the next English word will appear.<br>
+                How many attempts do you need to find all 9 words?                
             </p>
         </section>
         <section id="englishword">
