Remove germanwords data-vocab value and box content

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <div id="word"></div>
         </section>
         <section id="germanwords">
-            <div id="box1" class="box" data-vocab="horse">Pferd</div>
-            <div id="box2" class="box" data-vocab="giraffe">Giraffe</div>
-            <div id="box3" class="box" data-vocab="fish">Fisch</div>
-            <div id="box4" class="box" data-vocab="dog">Hund</div>
-            <div id="box5" class="box" data-vocab="tiger">Tiger</div>
-            <div id="box6" class="box" data-vocab="cat">Katze</div>
-            <div id="box7" class="box" data-vocab="guinea pig">Meerschweinchen</div>
-            <div id="box8" class="box" data-vocab="cheetah">Gepard</div>
-            <div id="box9" class="box" data-vocab="lion">Löwe</div>
+            <div id="box1" class="box" data-vocab="">German Word 1</div>
+            <div id="box2" class="box" data-vocab="">German Word 2</div>
+            <div id="box3" class="box" data-vocab="">German Word 3</div>
+            <div id="box4" class="box" data-vocab="">German Word 4</div>
+            <div id="box5" class="box" data-vocab="">German Word 5</div>
+            <div id="box6" class="box" data-vocab="">German Word 6</div>
+            <div id="box7" class="box" data-vocab="">German Word 7</div>
+            <div id="box8" class="box" data-vocab="">German Word 8</div>
+            <div id="box9" class="box" data-vocab="">German Word 9</div>
         </section>
         <section id="attempts">
             <div id="numberofattempts">
