Add quiz buttons for quiz types

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
     <!-- main game content -->
     <main id="game">
+        <section id="choosequiz">
+            <h2 id="choosequiztext">Choose a category</h2>
+            <button id="animals" class="quiztype" data-quiz="animals">Animals</button>
+            <button id="travel" class="quiztype" data-quiz="travel">Travel</button>
+            <button id="food" class="quiztype" data-quiz="food">Food</button>
+        </section>
         <section id="explanation">
             <h2>Choose the matching card!</h2>
             <p>
