Add placeholder text into englishword div

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </p>
         </section>
         <section id="englishword">
-            <div id="word"></div>
+            <div id="word">Choose a category above first</div>
         </section>
         <section id="germanwords">
             <div id="box1" class="box" data-vocab="">German Word 1</div>
