Refactor modal code to be more semantic

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
         <section id="restart">
             <button id="restartgame">Restart Game</button>
         </section>
+        <!-- Modal that is displayed when the game is finished 
+        code taken from w3schools.com/howto/howto_css_modal.asp
+        -->
+        <aside id="winModal" class="modal">
+            <div class="modal-content">
+                <p id="winningtext"></p>
+                <button id="close">Try again!</button>
+            </div>
+        </aside>
     </main>
 
-    <!-- Modal that is displayed when the game is finished 
-    code taken from w3schools.com/howto/howto_css_modal.asp
-    -->
-    <div id="winModal" class="modal">
-        <div class="modal-content">
-            <p id="winningtext"></p>
-            <button id="close">Try again!</button>
-        </div>
-    </div>
 
 
     <!-- footer with social media link -->
