Connect js file words.js to index.html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     </footer>
     
     <script src="https://kit.fontawesome.com/103d78b09a.js" crossorigin="anonymous"></script>
+    <script src="assets/js/words.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
