Add class disable to all germanwords boxes

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
             <div id="word">Choose a category above first</div>
         </section>
         <section id="germanwords">
-            <div id="box1" class="box" data-vocab="">German Word 1</div>
-            <div id="box2" class="box" data-vocab="">German Word 2</div>
-            <div id="box3" class="box" data-vocab="">German Word 3</div>
-            <div id="box4" class="box" data-vocab="">German Word 4</div>
-            <div id="box5" class="box" data-vocab="">German Word 5</div>
-            <div id="box6" class="box" data-vocab="">German Word 6</div>
-            <div id="box7" class="box" data-vocab="">German Word 7</div>
-            <div id="box8" class="box" data-vocab="">German Word 8</div>
-            <div id="box9" class="box" data-vocab="">German Word 9</div>
+            <div id="box1" class="box disable" data-vocab="">German Word 1</div>
+            <div id="box2" class="box disable" data-vocab="">German Word 2</div>
+            <div id="box3" class="box disable" data-vocab="">German Word 3</div>
+            <div id="box4" class="box disable" data-vocab="">German Word 4</div>
+            <div id="box5" class="box disable" data-vocab="">German Word 5</div>
+            <div id="box6" class="box disable" data-vocab="">German Word 6</div>
+            <div id="box7" class="box disable" data-vocab="">German Word 7</div>
+            <div id="box8" class="box disable" data-vocab="">German Word 8</div>
+            <div id="box9" class="box disable" data-vocab="">German Word 9</div>
         </section>
         <section id="attempts">
             <div id="numberofattempts">
