Change choosequiz text and englishword text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- main game content -->
     <main id="game">
         <section id="choosequiz">
-            <h2 id="choosequiztext">Choose a category</h2>
+            <h2 id="choosequiztext">Choose a Quiz Type</h2>
             <button id="animals" class="quiztype" data-quiz="animals">Animals</button>
             <button id="travel" class="quiztype" data-quiz="travel">Travel</button>
             <button id="food" class="quiztype" data-quiz="food">Food</button>
@@ -32,7 +32,7 @@
             </p>
         </section>
         <section id="englishword">
-            <div id="word">Choose a category above first</div>
+            <div id="word">Choose a Quiz Type above first</div>
         </section>
         <section id="germanwords">
             <div id="box1" class="box disable" data-vocab="">German Word 1</div>
