--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A vocabulary quiz to learn German">
     <meta name="keywords" content="vocabulary, quiz, german, english">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" sizes="192x192" href="assets/images/favicon.png" type="image/x-icon">
     <title>Vocabulary Quiz</title>
 </head>
 <body>
