Add <br> after icons in quiztype buttons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main id="game">
         <section id="choosequiz">
             <h2 id="choosequiztext">Choose a Quiz Type</h2>
-            <button id="animals" class="quiztype" data-quiz="animals"><i class="fas fa-paw"></i> Animals</button>
-            <button id="travel" class="quiztype" data-quiz="travel"><i class="fas fa-bus-alt"></i> Travel</button>
-            <button id="food" class="quiztype" data-quiz="food"><i class="fas fa-utensils"></i> Food</button>
+            <button id="animals" class="quiztype" data-quiz="animals"><i class="fas fa-paw"></i><br>Animals</button>
+            <button id="travel" class="quiztype" data-quiz="travel"><i class="fas fa-bus-alt"></i><br>Travel</button>
+            <button id="food" class="quiztype" data-quiz="food"><i class="fas fa-utensils"></i><br>Food</button>
         </section>
         <section id="explanation">
             <h2>Choose the matching card!</h2>
